# tap-aircall

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_aircall/: __init__.py  client.py  streams.py  tap.py
tests/: test_core.py
